--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@redocly/cli": "^1.18.1",
     "eslint": "^9.5.0",
     "nodemon": "^3.1.3",
     "pino-pretty": "^11.2.1"
